changed the function